src/parser.output
Terminals unused in grammar

   DBLDOT


State 101 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmts stmt
    3      | %empty

    4 stmt: expr ';'
    5     | if
    6     | while
    7     | forstmt
    8     | returnstmt
    9     | BREAK ';'
   10     | CONTINUE ';'
   11     | block
   12     | funcdef
   13     | UNRECOGNIZED
   14     | error
   15     | ';'

   16 expr: assignexpr
   17     | expr '+' expr
   18     | expr '-' expr
   19     | expr '*' expr
   20     | expr '/' expr
   21     | expr '%' expr
   22     | expr '>' expr
   23     | expr GREATER_EQ expr
   24     | expr '<' expr
   25     | expr LESS_EQ expr
   26     | expr EQ expr
   27     | expr NOT_EQ expr
   28     | expr AND M expr
   29     | expr OR M expr
   30     | term

   31 M: %empty

   32 term: '(' expr ')'
   33     | '-' expr
   34     | NOT expr
   35     | PLUS_PLUS lvalue
   36     | lvalue PLUS_PLUS
   37     | MINUS_MINUS lvalue
   38     | lvalue MINUS_MINUS
   39     | primary

   40 assignexpr: lvalue '=' expr

   41 primary: lvalue
   42        | call
   43        | tablemake
   44        | '(' funcdef ')'
   45        | const

   46 lvalue: ID
   47       | LOCAL ID
   48       | DBLCOLON ID
   49       | tableitem

   50 tableitem: lvalue '.' ID
   51          | lvalue '[' expr ']'
   52          | call '.' ID
   53          | call '[' expr ']'

   54 call: call '(' elist ')'
   55     | lvalue callsuffix
   56     | '(' funcdef ')' normcall

   57 callsuffix: normcall
   58           | methodcall

   59 normcall: '(' elist ')'

   60 methodcall: DBL_DOT ID '(' elist ')'

   61 elist: expr exprs
   62      | %empty

   63 exprs: ',' expr exprs
   64      | %empty

   65 tablemake: '[' elist ']'
   66          | '[' indexed ']'

   67 indexed: indexedelem indexedelems

   68 indexedelems: ',' indexedelem indexedelems
   69             | %empty

   70 indexedelem: '{' expr ':' expr '}'

   71 $@1: %empty

   72 block: '{' $@1 stmts '}'

   73 funcdef: funcprefix funcargs funcbody

   74 funcprefix: FUNCTION funcname

   75 funcname: ID
   76         | %empty

   77 funcargs: '(' idlist ')'

   78 funcbody: block

   79 const: NUMBER
   80      | STR
   81      | NIL
   82      | TRUE
   83      | FALSE

   84 idlist: ID ids
   85       | %empty

   86 ids: ',' ID ids
   87    | %empty

   88 if: ifprefix stmt
   89   | ifprefix stmt elseprefix stmt

   90 ifprefix: IF '(' expr ')'

   91 elseprefix: ELSE

   92 while: whilestart whilecond stmt

   93 whilestart: WHILE

   94 whilecond: '(' expr ')'

   95 forstmt: FOR '(' elist ';' expr ';' elist ')' stmt

   96 returnstmt: RETURN expr ';'
   97           | RETURN ';'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 21
'(' (40) 32 44 54 56 59 60 77 90 94 95
')' (41) 32 44 54 56 59 60 77 90 94 95
'*' (42) 19
'+' (43) 17
',' (44) 63 68 86
'-' (45) 18 33
'.' (46) 50 52
'/' (47) 20
':' (58) 70
';' (59) 4 9 10 15 95 96 97
'<' (60) 24
'=' (61) 40
'>' (62) 22
'[' (91) 51 53 65 66
']' (93) 51 53 65 66
'{' (123) 70 72
'}' (125) 70 72
error (256) 14
IF (258) 90
ELSE (259) 91
WHILE (260) 93
FOR (261) 95
NOT (262) 34
RETURN (263) 96 97
BREAK (264) 9
CONTINUE (265) 10
LOCAL (266) 47
DBLCOLON (267) 48
TRUE (268) 82
FALSE (269) 83
NIL (270) 81
FUNCTION (271) 74
EQ (272) 26
NOT_EQ (273) 27
DBLDOT (274)
STR (275) 80
PLUS_PLUS (276) 35 36
MINUS_MINUS (277) 37 38
GREATER_EQ (278) 23
LESS_EQ (279) 25
AND (280) 28
OR (281) 29
UNRECOGNIZED (282) 13
ID (283) 46 47 48 50 52 60 75 84 86
NUMBER (284) 79
UMINUS (285)
DBL_DOT (286) 60


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
stmts (52)
    on left: 2 3, on right: 1 2 72
stmt (53)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 2 88 89 92 95
expr (54)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30, on right:
    4 17 18 19 20 21 22 23 24 25 26 27 28 29 32 33 34 40 51 53 61 63
    70 90 94 95 96
M (55)
    on left: 31, on right: 28 29
term (56)
    on left: 32 33 34 35 36 37 38 39, on right: 30
assignexpr (57)
    on left: 40, on right: 16
primary (58)
    on left: 41 42 43 44 45, on right: 39
lvalue (59)
    on left: 46 47 48 49, on right: 35 36 37 38 40 41 50 51 55
tableitem (60)
    on left: 50 51 52 53, on right: 49
call (61)
    on left: 54 55 56, on right: 42 52 53 54
callsuffix (62)
    on left: 57 58, on right: 55
normcall (63)
    on left: 59, on right: 56 57
methodcall (64)
    on left: 60, on right: 58
elist (65)
    on left: 61 62, on right: 54 59 60 65 95
exprs (66)
    on left: 63 64, on right: 61 63
tablemake (67)
    on left: 65 66, on right: 43
indexed (68)
    on left: 67, on right: 66
indexedelems (69)
    on left: 68 69, on right: 67 68
indexedelem (70)
    on left: 70, on right: 67 68
block (71)
    on left: 72, on right: 11 78
$@1 (72)
    on left: 71, on right: 72
funcdef (73)
    on left: 73, on right: 12 44 56
funcprefix (74)
    on left: 74, on right: 73
funcname (75)
    on left: 75 76, on right: 74
funcargs (76)
    on left: 77, on right: 73
funcbody (77)
    on left: 78, on right: 73
const (78)
    on left: 79 80 81 82 83, on right: 45
idlist (79)
    on left: 84 85, on right: 77
ids (80)
    on left: 86 87, on right: 84 86
if (81)
    on left: 88 89, on right: 5
ifprefix (82)
    on left: 90, on right: 88 89
elseprefix (83)
    on left: 91, on right: 89
while (84)
    on left: 92, on right: 6
whilestart (85)
    on left: 93, on right: 92
whilecond (86)
    on left: 94, on right: 92
forstmt (87)
    on left: 95, on right: 7
returnstmt (88)
    on left: 96 97, on right: 8


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (stmts)

    program  go to state 1
    stmts    go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: stmts .
    2 stmts: stmts . stmt

    error         shift, and go to state 4
    IF            shift, and go to state 5
    WHILE         shift, and go to state 6
    FOR           shift, and go to state 7
    NOT           shift, and go to state 8
    RETURN        shift, and go to state 9
    BREAK         shift, and go to state 10
    CONTINUE      shift, and go to state 11
    LOCAL         shift, and go to state 12
    DBLCOLON      shift, and go to state 13
    TRUE          shift, and go to state 14
    FALSE         shift, and go to state 15
    NIL           shift, and go to state 16
    FUNCTION      shift, and go to state 17
    STR           shift, and go to state 18
    PLUS_PLUS     shift, and go to state 19
    MINUS_MINUS   shift, and go to state 20
    UNRECOGNIZED  shift, and go to state 21
    ID            shift, and go to state 22
    NUMBER        shift, and go to state 23
    '-'           shift, and go to state 24
    '['           shift, and go to state 25
    '('           shift, and go to state 26
    ';'           shift, and go to state 27
    '{'           shift, and go to state 28

    $end  reduce using rule 1 (program)

    stmt        go to state 29
    expr        go to state 30
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    block       go to state 38
    funcdef     go to state 39
    funcprefix  go to state 40
    const       go to state 41
    if          go to state 42
    ifprefix    go to state 43
    while       go to state 44
    whilestart  go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 3

    0 $accept: program $end .

    $default  accept


State 4

   14 stmt: error .

    $default  reduce using rule 14 (stmt)


State 5

   90 ifprefix: IF . '(' expr ')'

    '('  shift, and go to state 48


State 6

   93 whilestart: WHILE .

    $default  reduce using rule 93 (whilestart)


State 7

   95 forstmt: FOR . '(' elist ';' expr ';' elist ')' stmt

    '('  shift, and go to state 49


State 8

   34 term: NOT . expr

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    expr        go to state 50
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    const       go to state 41


State 9

   96 returnstmt: RETURN . expr ';'
   97           | RETURN . ';'

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26
    ';'          shift, and go to state 51

    expr        go to state 52
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    const       go to state 41


State 10

    9 stmt: BREAK . ';'

    ';'  shift, and go to state 53


State 11

   10 stmt: CONTINUE . ';'

    ';'  shift, and go to state 54


State 12

   47 lvalue: LOCAL . ID

    ID  shift, and go to state 55


State 13

   48 lvalue: DBLCOLON . ID

    ID  shift, and go to state 56


State 14

   82 const: TRUE .

    $default  reduce using rule 82 (const)


State 15

   83 const: FALSE .

    $default  reduce using rule 83 (const)


State 16

   81 const: NIL .

    $default  reduce using rule 81 (const)


State 17

   74 funcprefix: FUNCTION . funcname

    ID  shift, and go to state 57

    $default  reduce using rule 76 (funcname)

    funcname  go to state 58


State 18

   80 const: STR .

    $default  reduce using rule 80 (const)


State 19

   35 term: PLUS_PLUS . lvalue

    LOCAL     shift, and go to state 12
    DBLCOLON  shift, and go to state 13
    ID        shift, and go to state 22
    '('       shift, and go to state 59

    lvalue     go to state 60
    tableitem  go to state 35
    call       go to state 61


State 20

   37 term: MINUS_MINUS . lvalue

    LOCAL     shift, and go to state 12
    DBLCOLON  shift, and go to state 13
    ID        shift, and go to state 22
    '('       shift, and go to state 59

    lvalue     go to state 62
    tableitem  go to state 35
    call       go to state 61


State 21

   13 stmt: UNRECOGNIZED .

    $default  reduce using rule 13 (stmt)


State 22

   46 lvalue: ID .

    $default  reduce using rule 46 (lvalue)


State 23

   79 const: NUMBER .

    $default  reduce using rule 79 (const)


State 24

   33 term: '-' . expr

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    expr        go to state 63
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    const       go to state 41


State 25

   65 tablemake: '[' . elist ']'
   66          | '[' . indexed ']'

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26
    '{'          shift, and go to state 64

    $default  reduce using rule 62 (elist)

    expr         go to state 65
    term         go to state 31
    assignexpr   go to state 32
    primary      go to state 33
    lvalue       go to state 34
    tableitem    go to state 35
    call         go to state 36
    elist        go to state 66
    tablemake    go to state 37
    indexed      go to state 67
    indexedelem  go to state 68
    const        go to state 41


State 26

   32 term: '(' . expr ')'
   44 primary: '(' . funcdef ')'
   56 call: '(' . funcdef ')' normcall

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    FUNCTION     shift, and go to state 17
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    expr        go to state 69
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    funcdef     go to state 70
    funcprefix  go to state 40
    const       go to state 41


State 27

   15 stmt: ';' .

    $default  reduce using rule 15 (stmt)


State 28

   72 block: '{' . $@1 stmts '}'

    $default  reduce using rule 71 ($@1)

    $@1  go to state 71


State 29

    2 stmts: stmts stmt .

    $default  reduce using rule 2 (stmts)


State 30

    4 stmt: expr . ';'
   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   21     | expr . '%' expr
   22     | expr . '>' expr
   23     | expr . GREATER_EQ expr
   24     | expr . '<' expr
   25     | expr . LESS_EQ expr
   26     | expr . EQ expr
   27     | expr . NOT_EQ expr
   28     | expr . AND M expr
   29     | expr . OR M expr

    EQ          shift, and go to state 72
    NOT_EQ      shift, and go to state 73
    GREATER_EQ  shift, and go to state 74
    LESS_EQ     shift, and go to state 75
    AND         shift, and go to state 76
    OR          shift, and go to state 77
    '>'         shift, and go to state 78
    '<'         shift, and go to state 79
    '+'         shift, and go to state 80
    '-'         shift, and go to state 81
    '*'         shift, and go to state 82
    '/'         shift, and go to state 83
    '%'         shift, and go to state 84
    ';'         shift, and go to state 85


State 31

   30 expr: term .

    $default  reduce using rule 30 (expr)


State 32

   16 expr: assignexpr .

    $default  reduce using rule 16 (expr)


State 33

   39 term: primary .

    $default  reduce using rule 39 (term)


State 34

   36 term: lvalue . PLUS_PLUS
   38     | lvalue . MINUS_MINUS
   40 assignexpr: lvalue . '=' expr
   41 primary: lvalue .
   50 tableitem: lvalue . '.' ID
   51          | lvalue . '[' expr ']'
   55 call: lvalue . callsuffix

    PLUS_PLUS    shift, and go to state 86
    MINUS_MINUS  shift, and go to state 87
    '='          shift, and go to state 88
    '.'          shift, and go to state 89
    DBL_DOT      shift, and go to state 90
    '['          shift, and go to state 91
    '('          shift, and go to state 92

    $default  reduce using rule 41 (primary)

    callsuffix  go to state 93
    normcall    go to state 94
    methodcall  go to state 95


State 35

   49 lvalue: tableitem .

    $default  reduce using rule 49 (lvalue)


State 36

   42 primary: call .
   52 tableitem: call . '.' ID
   53          | call . '[' expr ']'
   54 call: call . '(' elist ')'

    '.'  shift, and go to state 96
    '['  shift, and go to state 97
    '('  shift, and go to state 98

    $default  reduce using rule 42 (primary)


State 37

   43 primary: tablemake .

    $default  reduce using rule 43 (primary)


State 38

   11 stmt: block .

    $default  reduce using rule 11 (stmt)


State 39

   12 stmt: funcdef .

    $default  reduce using rule 12 (stmt)


State 40

   73 funcdef: funcprefix . funcargs funcbody

    '('  shift, and go to state 99

    funcargs  go to state 100


State 41

   45 primary: const .

    $default  reduce using rule 45 (primary)


State 42

    5 stmt: if .

    $default  reduce using rule 5 (stmt)


State 43

   88 if: ifprefix . stmt
   89   | ifprefix . stmt elseprefix stmt

    error         shift, and go to state 4
    IF            shift, and go to state 5
    WHILE         shift, and go to state 6
    FOR           shift, and go to state 7
    NOT           shift, and go to state 8
    RETURN        shift, and go to state 9
    BREAK         shift, and go to state 10
    CONTINUE      shift, and go to state 11
    LOCAL         shift, and go to state 12
    DBLCOLON      shift, and go to state 13
    TRUE          shift, and go to state 14
    FALSE         shift, and go to state 15
    NIL           shift, and go to state 16
    FUNCTION      shift, and go to state 17
    STR           shift, and go to state 18
    PLUS_PLUS     shift, and go to state 19
    MINUS_MINUS   shift, and go to state 20
    UNRECOGNIZED  shift, and go to state 21
    ID            shift, and go to state 22
    NUMBER        shift, and go to state 23
    '-'           shift, and go to state 24
    '['           shift, and go to state 25
    '('           shift, and go to state 26
    ';'           shift, and go to state 27
    '{'           shift, and go to state 28

    stmt        go to state 101
    expr        go to state 30
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    block       go to state 38
    funcdef     go to state 39
    funcprefix  go to state 40
    const       go to state 41
    if          go to state 42
    ifprefix    go to state 43
    while       go to state 44
    whilestart  go to state 45
    forstmt     go to state 46
    returnstmt  go to state 47


State 44

    6 stmt: while .

    $default  reduce using rule 6 (stmt)


State 45

   92 while: whilestart . whilecond stmt

    '('  shift, and go to state 102

    whilecond  go to state 103


State 46

    7 stmt: forstmt .

    $default  reduce using rule 7 (stmt)


State 47

    8 stmt: returnstmt .

    $default  reduce using rule 8 (stmt)


State 48

   90 ifprefix: IF '(' . expr ')'

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    expr        go to state 104
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    const       go to state 41


State 49

   95 forstmt: FOR '(' . elist ';' expr ';' elist ')' stmt

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    $default  reduce using rule 62 (elist)

    expr        go to state 65
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    elist       go to state 105
    tablemake   go to state 37
    const       go to state 41


State 50

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   21     | expr . '%' expr
   22     | expr . '>' expr
   23     | expr . GREATER_EQ expr
   24     | expr . '<' expr
   25     | expr . LESS_EQ expr
   26     | expr . EQ expr
   27     | expr . NOT_EQ expr
   28     | expr . AND M expr
   29     | expr . OR M expr
   34 term: NOT expr .

    $default  reduce using rule 34 (term)


State 51

   97 returnstmt: RETURN ';' .

    $default  reduce using rule 97 (returnstmt)


State 52

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   21     | expr . '%' expr
   22     | expr . '>' expr
   23     | expr . GREATER_EQ expr
   24     | expr . '<' expr
   25     | expr . LESS_EQ expr
   26     | expr . EQ expr
   27     | expr . NOT_EQ expr
   28     | expr . AND M expr
   29     | expr . OR M expr
   96 returnstmt: RETURN expr . ';'

    EQ          shift, and go to state 72
    NOT_EQ      shift, and go to state 73
    GREATER_EQ  shift, and go to state 74
    LESS_EQ     shift, and go to state 75
    AND         shift, and go to state 76
    OR          shift, and go to state 77
    '>'         shift, and go to state 78
    '<'         shift, and go to state 79
    '+'         shift, and go to state 80
    '-'         shift, and go to state 81
    '*'         shift, and go to state 82
    '/'         shift, and go to state 83
    '%'         shift, and go to state 84
    ';'         shift, and go to state 106


State 53

    9 stmt: BREAK ';' .

    $default  reduce using rule 9 (stmt)


State 54

   10 stmt: CONTINUE ';' .

    $default  reduce using rule 10 (stmt)


State 55

   47 lvalue: LOCAL ID .

    $default  reduce using rule 47 (lvalue)


State 56

   48 lvalue: DBLCOLON ID .

    $default  reduce using rule 48 (lvalue)


State 57

   75 funcname: ID .

    $default  reduce using rule 75 (funcname)


State 58

   74 funcprefix: FUNCTION funcname .

    $default  reduce using rule 74 (funcprefix)


State 59

   56 call: '(' . funcdef ')' normcall

    FUNCTION  shift, and go to state 17

    funcdef     go to state 107
    funcprefix  go to state 40


State 60

   35 term: PLUS_PLUS lvalue .
   50 tableitem: lvalue . '.' ID
   51          | lvalue . '[' expr ']'
   55 call: lvalue . callsuffix

    '.'      shift, and go to state 89
    DBL_DOT  shift, and go to state 90
    '['      shift, and go to state 91
    '('      shift, and go to state 92

    $default  reduce using rule 35 (term)

    callsuffix  go to state 93
    normcall    go to state 94
    methodcall  go to state 95


State 61

   52 tableitem: call . '.' ID
   53          | call . '[' expr ']'
   54 call: call . '(' elist ')'

    '.'  shift, and go to state 96
    '['  shift, and go to state 97
    '('  shift, and go to state 98


State 62

   37 term: MINUS_MINUS lvalue .
   50 tableitem: lvalue . '.' ID
   51          | lvalue . '[' expr ']'
   55 call: lvalue . callsuffix

    '.'      shift, and go to state 89
    DBL_DOT  shift, and go to state 90
    '['      shift, and go to state 91
    '('      shift, and go to state 92

    $default  reduce using rule 37 (term)

    callsuffix  go to state 93
    normcall    go to state 94
    methodcall  go to state 95


State 63

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   21     | expr . '%' expr
   22     | expr . '>' expr
   23     | expr . GREATER_EQ expr
   24     | expr . '<' expr
   25     | expr . LESS_EQ expr
   26     | expr . EQ expr
   27     | expr . NOT_EQ expr
   28     | expr . AND M expr
   29     | expr . OR M expr
   33 term: '-' expr .

    $default  reduce using rule 33 (term)


State 64

   70 indexedelem: '{' . expr ':' expr '}'

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    expr        go to state 108
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    const       go to state 41


State 65

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   21     | expr . '%' expr
   22     | expr . '>' expr
   23     | expr . GREATER_EQ expr
   24     | expr . '<' expr
   25     | expr . LESS_EQ expr
   26     | expr . EQ expr
   27     | expr . NOT_EQ expr
   28     | expr . AND M expr
   29     | expr . OR M expr
   61 elist: expr . exprs

    EQ          shift, and go to state 72
    NOT_EQ      shift, and go to state 73
    GREATER_EQ  shift, and go to state 74
    LESS_EQ     shift, and go to state 75
    AND         shift, and go to state 76
    OR          shift, and go to state 77
    '>'         shift, and go to state 78
    '<'         shift, and go to state 79
    '+'         shift, and go to state 80
    '-'         shift, and go to state 81
    '*'         shift, and go to state 82
    '/'         shift, and go to state 83
    '%'         shift, and go to state 84
    ','         shift, and go to state 109

    $default  reduce using rule 64 (exprs)

    exprs  go to state 110


State 66

   65 tablemake: '[' elist . ']'

    ']'  shift, and go to state 111


State 67

   66 tablemake: '[' indexed . ']'

    ']'  shift, and go to state 112


State 68

   67 indexed: indexedelem . indexedelems

    ','  shift, and go to state 113

    $default  reduce using rule 69 (indexedelems)

    indexedelems  go to state 114


State 69

   17 expr: expr . '+' expr
   18     | expr . '-' expr
   19     | expr . '*' expr
   20     | expr . '/' expr
   21     | expr . '%' expr
   22     | expr . '>' expr
   23     | expr . GREATER_EQ expr
   24     | expr . '<' expr
   25     | expr . LESS_EQ expr
   26     | expr . EQ expr
   27     | expr . NOT_EQ expr
   28     | expr . AND M expr
   29     | expr . OR M expr
   32 term: '(' expr . ')'

    EQ          shift, and go to state 72
    NOT_EQ      shift, and go to state 73
    GREATER_EQ  shift, and go to state 74
    LESS_EQ     shift, and go to state 75
    AND         shift, and go to state 76
    OR          shift, and go to state 77
    '>'         shift, and go to state 78
    '<'         shift, and go to state 79
    '+'         shift, and go to state 80
    '-'         shift, and go to state 81
    '*'         shift, and go to state 82
    '/'         shift, and go to state 83
    '%'         shift, and go to state 84
    ')'         shift, and go to state 115


State 70

   44 primary: '(' funcdef . ')'
   56 call: '(' funcdef . ')' normcall

    ')'  shift, and go to state 116


State 71

   72 block: '{' $@1 . stmts '}'

    $default  reduce using rule 3 (stmts)

    stmts  go to state 117


State 72

   26 expr: expr EQ . expr

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    expr        go to state 118
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    const       go to state 41


State 73

   27 expr: expr NOT_EQ . expr

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    expr        go to state 119
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    const       go to state 41


State 74

   23 expr: expr GREATER_EQ . expr

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    expr        go to state 120
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    const       go to state 41


State 75

   25 expr: expr LESS_EQ . expr

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    expr        go to state 121
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    const       go to state 41


State 76

   28 expr: expr AND . M expr

    $default  reduce using rule 31 (M)

    M  go to state 122


State 77

   29 expr: expr OR . M expr

    $default  reduce using rule 31 (M)

    M  go to state 123


State 78

   22 expr: expr '>' . expr

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    expr        go to state 124
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    const       go to state 41


State 79

   24 expr: expr '<' . expr

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26

    expr        go to state 125
    term        go to state 31
    assignexpr  go to state 32
    primary     go to state 33
    lvalue      go to state 34
    tableitem   go to state 35
    call        go to state 36
    tablemake   go to state 37
    const       go to state 41


State 80

   17 expr: expr '+' . expr

    NOT          shift, and go to state 8
    LOCAL        shift, and go to state 12
    DBLCOLON     shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    NIL          shift, and go to state 16
    STR          shift, and go to state 18
    PLUS_PLUS    shift, and go to state 19
    MINUS_MINUS  shift, and go to state 20
    ID           shift, and go to state 22
    NUMBER       shift, and go to state 23
    '-'          shift, and go to state 24
    '['          shift, and go to state 25
    '('          shift, and go to state 26
